--- a/app/views/smartrent/admin/features/_form.html.erb
+++ b/app/views/smartrent/admin/features/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for([:admin, @admin_feature], html: {:class => "form-horizontal"}) do |f| %>
-  <%= render "layouts/error_messages", :target => @admin_feature %>
+<%= form_for([:admin, @feature], html: {:class => "form-horizontal"}) do |f| %>
+  <%= render "layouts/error_messages", :target => @feature %>
   
   <fieldset>
     <div class="form-group">
