--- a/app/views/smartrent/admin/homes/_form.html.erb
+++ b/app/views/smartrent/admin/homes/_form.html.erb
@@ -59,7 +59,7 @@
     </div>
     <div class="field">
       <div class="form-group">
-        <%= f.label :home_page_desc, :class => "col-md-4 control-label" %>
+        <%= f.label :home_page_desc, "Home Page Description", :class => "col-md-4 control-label" %>
         <div class="col-md-7">
           <%= f.text_field :home_page_desc, :class => "form-control" %>
         </div>
@@ -67,7 +67,7 @@
     </div>
     <div class="field">
       <div class="form-group">
-        <%= f.label :search_page_description, :class => "col-md-4 control-label" %>
+        <%= f.label :search_page_description, "Search Page Description", :class => "col-md-4 control-label" %>
         <div class="col-md-7">
           <%= f.text_area :search_page_description, :class => "form-control", :rows => 8 %>
         </div>
