--- a/app/assets/stylesheets/smartrent/admin/style.css
+++ b/app/assets/stylesheets/smartrent/admin/style.css
@@ -46,3 +46,13 @@
 .resident-status-bottom span.glyphicon-chevron-down {
   color: white;
 }
+.listing > h3 {
+  margin: 2px 0 30px 0;
+}
+#west h3 {
+  font-weight: 500;
+  margin: 3px 0 20px 0;
+}
+.paging-info .pagination {
+  overflow: hidden;
+}
