--- a/app/views/smartrent/admin/floor_plan_images/edit.html.erb
+++ b/app/views/smartrent/admin/floor_plan_images/edit.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:ui_center) do %>
   <div class="main">
-    <h3>Editing Floor Plan Image</h3>
-
+    <h3><%= link_to @home.title, admin_home_path(@home) %> &gt; <%= link_to @more_home.name, admin_home_more_home_path(@home, @more_home) %> &gt; Editing Floor Plan Image</h3>
+    <hr/>
     <%= render 'form' %>
   </div>
 <% end %>
