--- a/app/views/smartrent/admin/floor_plan_images/index.html.erb
+++ b/app/views/smartrent/admin/floor_plan_images/index.html.erb
@@ -8,18 +8,16 @@
   <div class="listing">
     <div class="links pull-right">
       <% if current_user.is_admin? %>
-        <%= link_to 'Import Floor Plan Images', import_admin_floor_plan_images_path, :class => "btn btn-default", :style => "display:none" %>
-        <%= link_to 'New Floor Plan Image', new_admin_floor_plan_image_path, :class => "btn btn-primary" %>
+        <%= link_to 'New Floor Plan Image', new_admin_home_more_home_floor_plan_image_path(@home, @more_home), :class => "btn btn-primary" %>
       <% end %>
     </div>
-    <h3>Listing Floor Plan Images</h3>
+    <h3><%= link_to @home.title, admin_home_path(@home) %> &gt; <%= link_to @more_home.name, admin_home_more_home_path(@home, @more_home) %> &gt; Listing Floor Plan Images</h3>
 
     <% if @floor_plan_images.present? %>
       <table class="table">
         <tr>
           <th>Image</th>
           <th>Caption</th>
-          <th>More Home</th>
           <th width="160px">Actions</th>
         </tr>
 
@@ -27,12 +25,11 @@
           <tr>
             <td><%= image_tag floor_plan_image.image, :width => 50 %></td>
             <td><%= floor_plan_image.caption %></td>
-            <td><%= floor_plan_image.more_home.name %></td>
             <td>
-              <%= link_to 'Show', admin_floor_plan_image_path(floor_plan_image) %> 
-              <% if current_user.is_admin? %> | 
-                <%= link_to 'Edit', edit_admin_floor_plan_image_path(floor_plan_image) %> | 
-                <%= link_to 'Delete', admin_floor_plan_image_path(floor_plan_image), method: :delete, data: { confirm: 'Are you sure?' } %>
+              <%= link_to 'Show', admin_home_more_home_floor_plan_image_path(@home, @more_home, floor_plan_image) %> &middot;
+              <% if current_user.is_admin? %>
+                <%= link_to 'Edit', edit_admin_home_more_home_floor_plan_image_path(@home, @more_home, floor_plan_image) %> &middot;
+                <%= link_to 'Delete', admin_home_more_home_floor_plan_image_path(@home, @more_home, floor_plan_image), method: :delete, data: { confirm: 'Are you sure?' } %>
               <% end %>
             </td>
           </tr>
