--- a/app/views/smartrent/admin/floor_plans/_filter_form.html.erb
+++ b/app/views/smartrent/admin/floor_plans/_filter_form.html.erb
@@ -1,8 +1,11 @@
 <div id="floor-plan-search">
   <h3>Floor Plan Search</h3>
   <%= form_tag({}, {:method => "get"}) do %>
-    <div class="form-group">
+    <div class="form-group" style="display:none">
       <%= text_field_tag :_id, params[:_id], :class => "form-control", :placeholder => "ID" %>
+    </div>
+    <div class="form-group">
+      <%= text_field_tag :origin_id, params[:origin_id], :class => "form-control", :placeholder => "Origin ID" %>
     </div>
     <div class="form-group">
       <%= text_field_tag :name, params[:name], :class => "form-control", :placeholder => "Name" %>
