--- a/app/views/smartrent/admin/floor_plans/new.html.erb
+++ b/app/views/smartrent/admin/floor_plans/new.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:ui_center) do %>
   <div class="main">
-    <h3>New Property Floor Plan</h3>
-
+    <h3><%= link_to @property.name, admin_property_path(@property) %> &gt; New Property Floor Plan</h3>
+    <hr/>
     <%= render 'form' %>
   </div>
 <% end %>
