replace Yes/No by activation date

--- a/app/views/smartrent/admin/balances/index.html.erb
+++ b/app/views/smartrent/admin/balances/index.html.erb
@@ -18,7 +18,7 @@
           <th>Current Property</th>
           <th>Status</th>
           <th>Balance</th>
-          <th>Activated</th>
+          <th>Activation Date</th>
           <th width="100px">Detail</th>
         </tr>
         <% @balances.each do |resident| %>
@@ -29,7 +29,7 @@
             <td><%= resident.current_property.name rescue resident.current_property_id %></td>
             <td><%= resident.smartrent_status %></td>
             <td><%= number_to_currency resident.balance, :precision => 0 %></td>
-            <td><%= resident.confirmed_at ? "Yes" : "No" %></td>
+            <td><%= resident.confirmed_at ? resident.confirmed_at.strftime("%Y-%m-%d") : "" %></td>
             <td>
               <% if resident.current_property_id && resident.crm_resident_id %>
                 <%= link_to 'View', main_app.property_resident_url(resident.current_property_id, "#{resident.crm_resident_id}_#{resident.current_unit_id}", :anchor => :smartrent, :host => HOST), :target => "_blank" %>
