smartrent front end: hide view floor plan if no images, format sq ft number

--- a/app/views/smartrent/homes/_featured_home_table.html.erb
+++ b/app/views/smartrent/homes/_featured_home_table.html.erb
@@ -1,7 +1,7 @@
 <table class="more_homesTable">
   <tr>
     <td class="name"><%= more_home.name %></td>
-    <td class="info"><%= more_home.beds %> Bedrooms / <%= more_home.baths %> Baths / <%= more_home.sq_ft %> sq. ft.</td>
+    <td class="info"><%= more_home.beds %> Bedrooms / <%= more_home.baths %> Baths / <%= more_home.sq_ft.to_i %> sq. ft.</td>
   </tr>
   <tr>
     <td colspan="3">
