--- a/app/views/smartrent/homes/_home_table.html.erb
+++ b/app/views/smartrent/homes/_home_table.html.erb
@@ -2,9 +2,11 @@
   <% more_homes.each do |home| %>
     <tr>
       <td class="name"><%= home.name %></td>
-      <td class="info"><%= home.beds %> Bedrooms / <%= home.baths %> Baths / <%= home.sq_ft %> sq. ft.</td>
+      <td class="info"><%= home.beds %> Bedrooms / <%= home.baths %> Baths / <%= home.sq_ft.to_i %> sq. ft.</td>
       <td class="floorPlanLink">
-        <a href="javascript:Home.showFloorPlan('floor-plan-<%= home.id %>')">View Floor Plan</a>
+        <% if home.floor_plan_images.length > 0 %>
+          <a href="javascript:Home.showFloorPlan('floor-plan-<%= home.id %>')">View Floor Plan</a>
+        <% end %>
       </td>
     </tr>
   <% end %>
