--- a/app/views/smartrent/residents/statement.html.erb
+++ b/app/views/smartrent/residents/statement.html.erb
@@ -43,7 +43,7 @@
     <h3>Monthly Awards Amount</h3>
 
     <div class="v">
-      <%= number_to_currency @resident.monthly_awards_amount, :precision => 0 %>
+      <%= number_to_currency (@resident.monthly_awards_amount + @resident.initial_reward), :precision => 0 %>
     </div>
 
     <h3>Months Earned</h3>
