fixed smartrent status logic, other cleanup

--- a/app/views/smartrent/admin/balances/index.html.erb
+++ b/app/views/smartrent/admin/balances/index.html.erb
@@ -27,12 +27,12 @@
             curr = nil
             past = []
             
-            resident.resident_properties.each do |p|
-              next if !p.property
-              if p.status == "Current"
-                curr = p.property
-              elsif p.status == "Past"
-                past << p.property
+            resident.resident_properties.each do |rp|
+              next if !rp.property
+              if rp.status == Smartrent::ResidentProperty.STATUS_CURRENT
+                curr = rp.property
+              elsif rp.status == Smartrent::ResidentProperty.STATUS_PAST
+                past << rp.property
               end
             end
           %>
