--- a/app/views/smartrent/admin/properties/show.html.erb
+++ b/app/views/smartrent/admin/properties/show.html.erb
@@ -97,8 +97,8 @@
       <%= link_to @property.promotion_url, @property.promotion_url if @property.promotion_url %>
     </p>
     <p>
-      <b>Status:</b>
-      <%= @property.status %>
+      <b>Smartrent Status:</b>
+      <%= @property.smartrent_status %>
     </p>
     
     <%= link_to '<< Back', admin_properties_path, :class => "btn btn-default back" %>
