--- a/app/views/smartrent/admin/properties/_filter_form.html.erb
+++ b/app/views/smartrent/admin/properties/_filter_form.html.erb
@@ -19,7 +19,7 @@
     </div>
     
     <div class="form-group">
-      <%= select_tag :status, options_for_select(Smartrent::Property.statuses.collect{|key,value| [value, key]}, params[:status]), 
+      <%= select_tag :smartrent_status, options_for_select(Smartrent::Property.statuses.collect{|key,value| [value, key]}, params[:smartrent_status]), 
             {:include_blank => "--Select Status--", :class => "form-control"}%>
     </div>
     <%= hidden_field_tag "search", "1" %>
