--- a/app/views/smartrent/admin/properties/_form.html.erb
+++ b/app/views/smartrent/admin/properties/_form.html.erb
@@ -106,9 +106,9 @@
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :status, :class => "col-md-4 control-label" %>
+      <%= f.label :smartrent_status, :class => "col-md-4 control-label" %>
       <div class="col-md-7">
-        <%= f.select :status, Smartrent::Property.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status"}, {:class => "form-control"} %>
+        <%= f.select :smartrent_status, Smartrent::Property.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status"}, {:class => "form-control"} %>
       </div>
     </div>
     <div class="field">
