--- a/app/views/smartrent/admin/floor_plan_images/_form.html.erb
+++ b/app/views/smartrent/admin/floor_plan_images/_form.html.erb
@@ -5,7 +5,7 @@
       <%= f.label :image, :class => "col-md-4 control-label" %>
       <div class="col-md-7">
         <%= f.file_field :image %>
-        
+        <p class="help-block"> Image should be 300x720 pixels and smaller than 10MB. GIF, JPG, PNG</p>
         <% if f.object.image && f.object.image.url %>
           <br><img src="<%= f.object.image.url %>" width="160px" />
         <% end %>
