--- a/app/views/smartrent/admin/more_homes/_form.html.erb
+++ b/app/views/smartrent/admin/more_homes/_form.html.erb
@@ -51,6 +51,7 @@
               <%= builder.check_box :_destroy %>
               <%= builder.label :_destroy, "Remove Image", :class => "control-label" %>
               
+              <p class="help-block"> Image should be 300x720 pixels and smaller than 10MB. GIF, JPG, PNG</p>
               <% if builder.object.image && builder.object.image.url %>
                 <br><img src="<%= builder.object.image.url %>" width="100px" />
               <% end %>
